Sat Jan  7 18:25:00 2006  Tim Janik  <timj@gtk.org>

	* web/Makefile: build logogallery files.

	* web/logogallery.doxi: new file, showing the logo gallery.

	* web/webmenu.doxi:
	* web/oldnews.doxi:
	* web/historic.doxi:
	* web/about.doxi: link fixes.

Thu Jan  5 01:22:36 2006  Tim Janik  <timj@gtk.org>

	* web/sound-browser.doxi: build sound browser page with included php.

	* web/sound-upload.doxi: build sound upload page with included php.

	* web/file-upload.php: file upload facility implementation.

	* web/file-browser.php: subdirectory file browser implementation.

	* web/Makefile: process and install sound browser and upload files.

	* web/webmenu.doxi:
	* web/oldnews.doxi:
	* web/news.doxi: uri fixes.

Wed Jan  4 01:18:35 2006  Tim Janik  <timj@gtk.org>

	* web/gallery.php: fixes for MSIE applying "<center>" recursively.
	padding fixes.

	* web/scanimages.sh: padding fixes.

Wed Jan  4 00:23:51 2006  Tim Janik  <timj@gtk.org>

	* web/Makefile: new file with rules to build new web site docs.
	also generates screenshots.phpini.

	* web/gallery.php: php implementation of a picture gallery browser
	with thumbnail and description support.

	* web/scanimages.sh: script to generate a .phpini file from a picture
	gallery directory, needed by gallery.php.

	* web/screenshots.doxi: added screenshot gallery page.

Mon Jan  2 23:36:54 2006  Tim Janik  <timj@gtk.org>

	* web/*.doxi: CVS moved here from docs/web/.

Mon Jan  2 23:27:26 2006  Tim Janik  <timj@gtk.org>

	* docs/web/*.doxi: heading and URL fixes.

Thu Dec 22 23:20:01 2005  Tim Janik  <timj@gtk.org>

	* docs/web/news.doxi:
	* docs/web/search.doxi:
	* docs/web/download.doxi:
	* docs/web/development.doxi:
	* docs/web/documentation.doxi:
	* docs/web/contact.doxi: converted to doxer markup.

	* docs/web/oldnews.doxi:
	* docs/web/webmenu.doxi: small fixups.
	
	* docs/web/historic.doxi:
	* docs/web/about.doxi: adapted page title.

	* docs/web/beastdefs.doxi: more markup facilities.
